Add monthly thermal amplitude var to new dataframe

--- a/project_1/my_eda.ipynb
+++ b/project_1/my_eda.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start, end = \"1938-01-01\", \"2020-01-01\""
+    "start, end = \"1980-01-01\", \"2020-01-01\""
    ]
   },
   {
@@ -192,11 +192,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73e22c33",
+   "id": "dece5b1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_time_series(selected_data, 'date', 'tdiff', ma_window=12)"
+    "plot_time_series(selected_data, 'date', 'prec', ma_window=12)"
    ]
   },
   {
@@ -206,17 +206,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tdiff_year = []\n",
+    "diff_year = []\n",
+    "diff_month = []\n",
     "for year in full_data['year'].unique():\n",
     "    date = full_data[full_data['year'] == year]['date'].min()\n",
-    "    tdiff_year.append({\n",
+    "    diff_year.append({\n",
     "        \"date\": date,\n",
-    "        \"tdiff\": full_data[full_data['year'] == year]['tmax'].max() - full_data[full_data['year'] == year]['tmin'].min()\n",
-    "    }) \n",
+    "        \"tdiff\": full_data[full_data['year'] == year]['tmax'].max() - full_data[full_data['year'] == year]['tmin'].min(),\n",
+    "        \"pdiff\": full_data[full_data['year'] == year]['prec'].max() - full_data[full_data['year'] == year]['prec'].min()\n",
+    "    })\n",
+    "\n",
+    "    for month in full_data['month'].unique():\n",
+    "        mon_date =  full_data[(full_data['year'] == year) & (full_data['month'] == month)]['date'].min()\n",
+    "        diff_month.append({\n",
+    "        \"date\": mon_date,\n",
+    "            \"tdiff\": full_data[(full_data['year'] == year) & (full_data['month'] == month)]['tmax'].max() - full_data[(full_data['year'] == year) & (full_data['month'] == month)]['tmin'].min(),\n",
+    "            \"pdiff\": full_data[(full_data['year'] == year) & (full_data['month'] == month)]['prec'].max() - full_data[(full_data['year'] == year) & (full_data['month'] == month)]['prec'].min()\n",
+    "        })\n",
     "\n",
     "\n",
-    "tdiff_year = pd.DataFrame.from_dict(tdiff_year)\n",
-    "tdiff_year.head()"
+    "diff_year = pd.DataFrame.from_dict(diff_year)\n",
+    "diff_year.head()\n",
+    "\n",
+    "diff_month = pd.DataFrame.from_dict(diff_month)\n",
+    "diff_month.head()"
    ]
   },
   {
@@ -226,17 +239,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_time_series(tdiff_year, 'date', 'tdiff', ma_window=12)"
+    "plot_time_series(diff_month, 'date', 'tdiff', ma_window=12)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec5efcaf",
+   "id": "ed09ce8a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_time_series(selected_data, 'date', 'prec', ma_window=12)"
+    "plot_time_series(diff_year, 'date', 'pdiff', ma_window=12)"
    ]
   },
   {
