Add lag plots for min and max temp

--- a/project_1/my_eda.ipynb
+++ b/project_1/my_eda.ipynb
@@ -409,6 +409,26 @@
    "id": "a7a69f7e",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "lag_plot_grid(temp_data['tmin'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9994e463",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lag_plot_grid(temp_data['tmax'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac61b076",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
