--- a/project_1/my_eda.ipynb
+++ b/project_1/my_eda.ipynb
@@ -14,7 +14,8 @@
     "import statsmodels.api as sm\n",
     "import seaborn as sns\n",
     "import os\n",
-    "from statsmodels.nonparametric.smoothers_lowess import lowess"
+    "from statsmodels.nonparametric.smoothers_lowess import lowess\n",
+    "from scipy.stats import boxcox "
    ]
   },
   {
@@ -200,42 +201,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e8dddb6c",
+   "metadata": {},
+   "source": [
+    "# Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db56747c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_data.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fa1d6767",
    "metadata": {},
    "outputs": [],
    "source": [
-    "diff_year = []\n",
-    "diff_month = []\n",
-    "for year in full_data['year'].unique():\n",
-    "    date = full_data[full_data['year'] == year]['date'].min()\n",
-    "    diff_year.append({\n",
-    "        \"date\": date,\n",
-    "        \"tdiff\": full_data[full_data['year'] == year]['tmax'].max() - full_data[full_data['year'] == year]['tmin'].min(),\n",
-    "        \"pdiff\": full_data[full_data['year'] == year]['prec'].max() - full_data[full_data['year'] == year]['prec'].min()\n",
-    "    })\n",
+    "diff_month = (selected_data.groupby(['year', 'month']).apply(lambda g: pd.Series({\n",
+    "        'date': g['date'].min(),\n",
+    "        'tdiff': g['tmax'].max() - g['tmin'].min()\n",
+    "    }))).reset_index(drop=True)\n",
     "\n",
-    "    for month in full_data['month'].unique():\n",
-    "        mon_date =  full_data[(full_data['year'] == year) & (full_data['month'] == month)]['date'].min()\n",
-    "        diff_month.append({\n",
-    "        \"date\": mon_date,\n",
-    "            \"tdiff\": full_data[(full_data['year'] == year) & (full_data['month'] == month)]['tmax'].max() - full_data[(full_data['year'] == year) & (full_data['month'] == month)]['tmin'].min(),\n",
-    "            \"pdiff\": full_data[(full_data['year'] == year) & (full_data['month'] == month)]['prec'].max() - full_data[(full_data['year'] == year) & (full_data['month'] == month)]['prec'].min()\n",
-    "        })\n",
-    "\n",
-    "\n",
-    "diff_year = pd.DataFrame.from_dict(diff_year)\n",
-    "diff_year.head()\n",
-    "\n",
-    "diff_month = pd.DataFrame.from_dict(diff_month)\n",
-    "diff_month.head()"
+    "diff_month['date_str'] = [str(date) for date in diff_month['date']]\n",
+    "diff_month['month'] = diff_month['date_str'].str.extract(r'\\-([0-9]{2})\\-')\n",
+    "diff_month['year'] = diff_month['date_str'].str.extract(r'([0-9]{4})')\n",
+    "diff_month['month'] = pd.to_numeric(diff_month['month'])\n",
+    "diff_month['year'] = pd.to_numeric(diff_month['year'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64891d82",
+   "id": "491900f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff_month"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6298dd8b",
+   "metadata": {},
+   "source": [
+    "# Exploring new Feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "556d7048",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,35 +266,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "91690f65",
+   "metadata": {},
+   "source": [
+    "## Log Feat"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed09ce8a",
+   "id": "01efec2c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_time_series(diff_year, 'date', 'pdiff', ma_window=12)"
+    "diff_month['log_diff'] = np.log(diff_month['tdiff'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f71c539d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_time_series(diff_month, 'date', 'log_diff', ma_window=12)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f65459dd",
+   "id": "97c84421",
    "metadata": {},
    "source": [
-    "Initial Characteristics:\n",
-    "\n",
-    "* Seasonality is a given\n",
-    "* Trends at least so far are hard to see with just the time series plots"
+    "## Seasonal Plot"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cca366fa",
+   "id": "9a21aba5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_data = selected_data[['date','year','month_str','tmin', 'tmed', 'tmax']]\n",
+    "temp_data = diff_month[['date','year','month', 'tdiff', 'log_diff']]\n",
     "temp_data = temp_data.set_index('date')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf1874bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def seasonal_plot(df, col, title):\n",
+    "    _, ax = plt.subplots(figsize=(16, 8))\n",
+    "    sm.graphics.tsa.month_plot(df[col], ylabel='col', ax=ax)\n",
+    "    ax.set_title(title)\n",
+    "    ax.set_xlabel(\"Month\")\n",
+    "    plt.show()"
    ]
   },
   {
@@ -281,62 +334,193 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(16, 8))\n",
-    "sm.graphics.tsa.month_plot(temp_data['tmed'], ylabel='tmed', ax=ax)\n",
-    "ax.set_title(\"Seasonal Subseries Plot: Avg Temp\")\n",
-    "ax.set_xlabel(\"Month\")\n",
-    "plt.show()"
+    "seasonal_plot(temp_data, 'tdiff', \"Seasonal Subseries Plot: Temperature Range (Max - Min)\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74d21f90",
+   "id": "b8ee9d0a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.lineplot(data=temp_data, x='year', y='tmed', hue='month_str')\n",
-    "plt.title('Monthly Plot: Tmed')\n",
-    "plt.xlabel('Year')\n",
-    "plt.ylabel('Tmed (C)')\n",
-    "plt.legend(bbox_to_anchor=(1.05, 1), loc=2)\n",
-    "plt.show()"
+    "seasonal_plot(temp_data, 'log_diff', \"Seasonal Subseries Plot: Log Temperature Range (Max - Min)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0f51dfd",
+   "metadata": {},
+   "source": [
+    "## Box Cox"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb22536e",
+   "id": "6c295843",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.lineplot(data=temp_data, x='year', y='tmin', hue='month_str')\n",
-    "plt.title('Monthly Plot: Tmin')\n",
-    "plt.xlabel('Year')\n",
-    "plt.ylabel('Tmin (C)')\n",
-    "plt.legend(bbox_to_anchor=(1.05, 1), loc=2)\n",
-    "plt.show()"
+    "bc, lambda_ = boxcox(temp_data['tdiff'])\n",
+    "print(f\"Estimated Lambda: {lambda_}\")\n",
+    "\n",
+    "plot_time_series(pd.DataFrame.from_dict({\n",
+    "    \"date\": list(temp_data.index),\n",
+    "    \"box_cox\": bc\n",
+    "}), 'date', 'box_cox')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f2f065b",
+   "metadata": {},
+   "source": [
+    "## Linear Regression"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29177fbb",
+   "id": "ac61b076",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.lineplot(data=temp_data, x='year', y='tmax', hue='month_str')\n",
-    "plt.title('Monthly Plot: Tmax')\n",
-    "plt.xlabel('Year')\n",
-    "plt.ylabel('Tmax (C)')\n",
-    "plt.legend(bbox_to_anchor=(1.05, 1), loc=2)\n",
-    "plt.show()"
+    "import statsmodels.formula.api as smf \n",
+    "\n",
+    "diff_month['time'] = diff_month['date'].dt.to_period('M').astype(int) \n",
+    "\n",
+    "# fir linear regression model\n",
+    "fit = smf.ols(formula='tdiff ~ time', data=diff_month).fit()\n",
+    "print(fit.summary())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52acc2d5",
+   "id": "8f4562d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "residuals = fit.resid\n",
+    "# Resíduos: detrended time series\n",
+    "plt.subplot(1, 1, 1)\n",
+    "plt.plot(diff_month['date'], residuals, color='blue')\n",
+    "plt.title(\"Temperature Range Detrended\")\n",
+    "plt.ylabel(\"Residuals\")\n",
+    "plt.xlabel(\"Time\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc2f6b2e",
+   "metadata": {},
+   "source": [
+    "## Difference Operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "907d5c32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tdiff_series = temp_data['tdiff']\n",
+    "tdiff_diff = tdiff_series.diff(12)\n",
+    "tdiff_diff\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a5a9d65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(temp_data.index, tdiff_diff, color='#ff9900')\n",
+    "plt.title(\"Temperature Range Differenced\")\n",
+    "plt.ylabel(\"Temperature Range\")\n",
+    "plt.xlabel(\"date\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed2cc3af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff12 = tdiff_diff.to_frame()\n",
+    "diff12['year_month'] = pd.to_datetime(diff12.index)\n",
+    "diff12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39aeaf84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff12 = tdiff_diff.to_frame()\n",
+    "diff12['year_month'] = pd.to_datetime(diff12.index)\n",
+    "\n",
+    "x = diff12[['year_month','tdiff']]\n",
+    "x = x.set_index('year_month')\n",
+    "\n",
+    "seasonal_plot(x, 'tdiff', \"Seasonal Plot: tdiff diff 12\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fef761f6",
+   "metadata": {},
+   "source": [
+    "## STL Decomposition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "013846bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from statsmodels.tsa.seasonal import STL     ## to STL decomposition\n",
+    "\n",
+    "# STL with periodic seasonal component\n",
+    "stl_1 = STL(temp_data['tdiff'], seasonal=len(temp_data), robust=False).fit()\n",
+    "\n",
+    "# STL with seasonal window of 13\n",
+    "stl_2 = STL(temp_data['tdiff'], seasonal=13, robust=False).fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ebdb9d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stl_1.plot()\n",
+    "stl_2.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e87a8da8",
+   "metadata": {},
+   "source": [
+    "## Lag Plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7efecab7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,50 +570,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cbe158e",
+   "id": "4bc65900",
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_data['tmax'].head()"
+    "lag_plot_grid(temp_data['tdiff'], title=\"Lag Plots: Tdiff\")\n",
+    "lag_plot_grid(stl_1.resid, title=\"Lag Plots: Tdiff - Remainder\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02bd01e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lag_plot_grid(temp_data['tmed'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a7a69f7e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lag_plot_grid(temp_data['tmin'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9994e463",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lag_plot_grid(temp_data['tmax'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac61b076",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
