Add missing calcs

--- a/project_1/my_eda.ipynb
+++ b/project_1/my_eda.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start, end = \"1980-01-01\", \"2020-01-01\""
+    "start, end = \"1995-01-01\", \"2020-01-01\""
    ]
   },
   {
@@ -368,7 +368,23 @@
     "plot_time_series(pd.DataFrame.from_dict({\n",
     "    \"date\": list(temp_data.index),\n",
     "    \"box_cox\": bc\n",
-    "}), 'date', 'box_cox')"
+    "}), 'date', 'box_cox', ma_window=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "579115f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bc, lambda_ = boxcox(temp_data['log_diff'])\n",
+    "print(f\"Estimated Lambda: {lambda_}\")\n",
+    "\n",
+    "plot_time_series(pd.DataFrame.from_dict({\n",
+    "    \"date\": list(temp_data.index),\n",
+    "    \"box_cox\": bc\n",
+    "}), 'date', 'box_cox', ma_window=12)"
    ]
   },
   {
@@ -414,6 +430,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68b2a68f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statsmodels.formula.api as smf \n",
+    "\n",
+    "diff_month['time'] = diff_month['date'].dt.to_period('M').astype(int) \n",
+    "\n",
+    "# fir linear regression model\n",
+    "fit = smf.ols(formula='log_diff ~ time', data=diff_month).fit()\n",
+    "print(fit.summary())\n",
+    "\n",
+    "residuals = fit.resid\n",
+    "# Resíduos: detrended time series\n",
+    "plt.subplot(1, 1, 1)\n",
+    "plt.plot(diff_month['date'], residuals, color='blue')\n",
+    "plt.title(\"Temperature Range Detrended\")\n",
+    "plt.ylabel(\"Residuals\")\n",
+    "plt.xlabel(\"Time\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cc2f6b2e",
    "metadata": {},
@@ -430,7 +472,7 @@
    "source": [
     "tdiff_series = temp_data['tdiff']\n",
     "tdiff_diff = tdiff_series.diff(12)\n",
-    "tdiff_diff\n"
+    "tdiff_diff"
    ]
   },
   {
@@ -492,10 +534,21 @@
     "from statsmodels.tsa.seasonal import STL     ## to STL decomposition\n",
     "\n",
     "# STL with periodic seasonal component\n",
-    "stl_1 = STL(temp_data['tdiff'], seasonal=len(temp_data), robust=False).fit()\n",
+    "stl_1 = STL(temp_data['log_diff'], seasonal=len(temp_data), robust=True).fit()\n",
     "\n",
     "# STL with seasonal window of 13\n",
-    "stl_2 = STL(temp_data['tdiff'], seasonal=13, robust=False).fit()"
+    "stl_2 = STL(temp_data['log_diff'], seasonal=13, robust=True).fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e99c406",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Periodic Season\")\n",
+    "stl_1.plot()"
    ]
   },
   {
@@ -505,6 +558,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\"13 Season\")\n",
+    "stl_2.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dbc3ea6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# STL with periodic seasonal component\n",
+    "stl_1 = STL(temp_data['tdiff'], seasonal=len(temp_data), robust=False).fit()\n",
+    "\n",
+    "# STL with seasonal window of 13\n",
+    "stl_2 = STL(temp_data['tdiff'], seasonal=13, robust=False).fit()\n",
+    "\n",
     "stl_1.plot()\n",
     "stl_2.plot()"
    ]
@@ -570,13 +640,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dd5ffb93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lag_plot_grid(temp_data['log_diff'], title=\"Lag Plots: Log Tdiff\")\n",
+    "lag_plot_grid(stl_1.resid, title=\"Lag Plots: Log Tdiff - Remainder\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4bc65900",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lag_plot_grid(temp_data['tdiff'], title=\"Lag Plots: Tdiff\")\n",
-    "lag_plot_grid(stl_1.resid, title=\"Lag Plots: Tdiff - Remainder\")"
+    "lag_plot_grid(temp_data['log_diff'], title=\"Lag Plots: Log Tdiff\")\n",
+    "lag_plot_grid(stl_1.resid, title=\"Lag Plots: Log Tdiff - Remainder\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1a5cc8a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
