--- a/project_1/my_eda.ipynb
+++ b/project_1/my_eda.ipynb
@@ -441,7 +441,7 @@
     "diff_month['time'] = diff_month['date'].dt.to_period('M').astype(int) \n",
     "\n",
     "# fir linear regression model\n",
-    "fit = smf.ols(formula='log_diff ~ time', data=diff_month).fit()\n",
+    "fit = smf.ols(formula='tdiff ~ time', data=diff_month).fit()\n",
     "print(fit.summary())\n",
     "\n",
     "residuals = fit.resid\n",
@@ -580,6 +580,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43c3257f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from statsmodels.stats.diagnostic import het_arch\n",
+    "het_arch(stl_1.resid) # Not heteroskedascity"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e87a8da8",
    "metadata": {},
@@ -644,8 +656,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lag_plot_grid(temp_data['log_diff'], title=\"Lag Plots: Log Tdiff\")\n",
-    "lag_plot_grid(stl_1.resid, title=\"Lag Plots: Log Tdiff - Remainder\")"
+    "lag_plot_grid(temp_data['tdiff'], title=\"Lag Plots: Tdiff\")\n",
+    "lag_plot_grid(stl_1.resid, title=\"Lag Plots: Tdiff - Remainder\")"
    ]
   },
   {
